@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-27T01:10:21Z",
+  "timestamp" : "2022-10-28T08:17:51Z",
   "count_outdated" : 129,
   "uniques_outdated" : 44,
-  "count" : 137,
-  "uniques" : 49,
+  "count" : 139,
+  "uniques" : 50,
   "views" : [
     {
       "timestamp": "2022-10-18T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-10-28T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
