@@ -1,3 +1,11 @@
+2022-10-28T08:17:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3343910937 # 562
+* notice: last 14d: unq all: 6 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 44 129 / 49 137
+* notice: next accum: outdated-unq outdated-all / unq all: 44 129 / 50 139
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-28]
+
 2022-10-27T01:10:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3333735798 # 558
 * notice: last 14d: unq all: 5 8
